# QNote

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  package.sh  start.bat  start.ps1  start.sh  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: BrowserCheck.tsx  Editor.tsx  HistoryPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TabBar.tsx  Toolbar.tsx  ToolbarCommands.ts  WelcomeScreen.tsx
src/lib/: editorView.ts  filesystem.ts  git.ts  markdown.ts  schema.ts
src/store/: editorStore.ts
src/types/: fs-api.d.ts
